<resources>
    <string name="app_name">Aero Atlas</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="LOGIN">LOGIN</string>
    <string name="or_login_with">Or login with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register!</string>
    <string name="please_enter_your_details">Please enter your details</string>
    <string name="welcome_to_aeroatlas">Welcome to AeroAtlas!</string>
    <string name="cover">cover</string>
    <string name="landmark_placeholder">landmark placeholder</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or_signup_with">or signup with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="discover_your_dream_destination">Discover Your Dream Destination</string>
    <string name="description">Your next adventure awaits. Begin your story here.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_recent_purchases">No Recent Purchases</string>
    <string name="favourites">Favourites</string>
    <string name="recent_purchase">Recent Purchase</string>
    <string name="logout">Logout</string>
    <string name="password_value">*********</string>
    <string name="example_yahoo_com">example@yahoo.com</string>
    <string name="useremailaddress">userEmailAddress</string>
    <string name="spin_the_globe_find_your_next_destination">Spin The Globe, Find Your Next Destination!</string>
    <string name="your_adventure_awaits">Your Adventure awaits..</string>
    <string name="find_your_next_getaway">Find Your Next Getaway</string>
</resources>