<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".LoginActivity"
android:background="@drawable/background">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.7"
    android:background="@color/customcolour1" >

</RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="28dp"
    android:gravity="center"
    android:layout_above="@id/card_view">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/earth"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aero_atlas"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15sp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left"/>

</LinearLayout>
<androidx.cardview.widget.CardView
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    app:cardCornerRadius="28dp"
    android:layout_marginBottom="-20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:padding="28dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#03685E"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:alpha="0.7"/>

            <Button
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@color/customcolour1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="0dp"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>


        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:alpha="0.7"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/email_outline"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:alpha="0.7"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/lock_outline"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:layout_centerVertical="true"
                android:alpha="0.7"/>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:alpha="0.7"/>
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/LOGIN"
            android:backgroundTint="@color/customcolour1"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_login_with"
            android:layout_gravity="center"
            android:alpha="0.7"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:background="@drawable/twitter"/>
            <ImageView
                android:id="@+id/google"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:background="@drawable/google"/>
            <ImageView
                android:id="@+id/facebook"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:background="@drawable/facebook"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
</RelativeLayout>
