<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F8FA"
    tools:context=".ui.fragments.profilepage.ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/userPageBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/arrow_left"
            android:padding="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="25dp">

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="45dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />

            <ImageView
                android:id="@+id/addIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom|end"
                android:layout_margin="5dp"
                android:background="@drawable/userpage_circle_icon"
                android:src="@drawable/userpage_add_icon" />
        </FrameLayout>

        <TextView
            android:id="@+id/userPageEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/useremailaddress"
            android:textColor="@color/customcolour1"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userIcon"
        android:layout_margin="17dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/signupPageEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/email_address"
                    android:textColor="@color/customcolour1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/signupPageEmailValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/example_yahoo_com"
                    android:textColor="@color/customcolour1"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@drawable/userpage_arrow"
                    app:tint="@color/customcolour1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CDEFED" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="12dp">

                <TextView
                    android:id="@+id/signupPagePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/password"
                    android:textColor="@color/customcolour1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/signupPagePasswordValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/abyssinica_sil"
                    android:gravity="center"
                    android:text="@string/password_value"
                    android:textColor="@color/customcolour1"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@drawable/userpage_arrow"
                    app:tint="@color/customcolour1" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="12dp">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/favourites"
                    android:textColor="@color/customcolour1"
                    android:textSize="17sp"
                    app:strokeColor="@color/customcolour1"
                    app:strokeWidth="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/customcolour1"
                    android:gravity="center"
                    android:text="@string/recent_purchase"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CDEFED" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="95dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/no_recent_purchases"
                    android:textAlignment="center"
                    android:textColor="@color/customcolour1"
                    android:textSize="23sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/userPageLogoutButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="122dp"
        android:backgroundTint="#D03232"
        android:text="@string/logout"
        android:textSize="20sp"
        app:cornerRadius="15dp" />

</RelativeLayout>